force-app/main/default/objects/Document__c/fields/Document_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Document_Created_At__c</fullName>
    <label>Document Created At</label>
    <type>DateTime</type>
</CustomField>