force-app/main/default/objects/Document__c/fields/Last_Viewed_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Viewed_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Viewed User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>