force-app/main/default/objects/Document__c/fields/Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Requested_At__c</fullName>
    <label>Requested At</label>
    <type>DateTime</type>
</CustomField>