force-app/main/default/objects/Document__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>