force-app/main/default/objects/Document__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Ticket Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>