force-app/main/default/objects/Document__c/recordTypes/Account_Documents.recordType-meta.xml
<RecordType>
    <fullName>Account_Documents</fullName>
    <active>true</active>
    <label>Account Documents</label>
</RecordType>