force-app/main/default/objects/Document__c/recordTypes/Opportunity_Documents.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Documents</fullName>
    <active>true</active>
    <label>Opportunity Documents</label>
</RecordType>