force-app/main/default/objects/Document__c/validationRules/RestrictEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   
  NOT(CONTAINS( $Label.Users_Exclusion , $User.Username)),
  NOT(ISNEW()),
 OR( ISCHANGED( Name ), ISCHANGED( Template_Id__c ), ISCHANGED( Ticket_Number__c ), ISCHANGED( Version__c ), ISCHANGED( Account__c )    ) )</errorConditionFormula>
    <errorMessage>Cannot Update Restricted Fields</errorMessage>
</ValidationRule>